--- a/task1_auth-form/src/index.css
+++ b/task1_auth-form/src/index.css
@@ -6,8 +6,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--color-light);
+  background-color: var(--color-dark);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,10 +15,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --color-gray: #f3f3f3;
-  --color-sea: #f3f3f3;
-  --color-green: #f3f3f3;
-  --color-blue: #f3f3f3;
+  --color-light: #f3f3f3;
+  --color-dark: #213547;
+  --color-sea: #29adb2;
+  --color-green: #c5e898;
+  --color-blue: #0766ad;
   --color-warning: #fa7070;
 }
 
@@ -35,16 +36,26 @@ body {
   flex-direction: column;
 }
 
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  color: var(--color-light);
+}
+
+a:hover {
+  color: var(--color-green);
+}
+
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: var(--color-dark);
+    background-color: var(--color-light);
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  a:visited {
+    color: var(--color-dark);
   }
 }
 
