feat: add profile page

--- a/task1_auth-form/src/components/layout/Navigation/Navigation.module.css
+++ b/task1_auth-form/src/components/layout/Navigation/Navigation.module.css
@@ -21,7 +21,7 @@
 .signout {
   border: none;
   padding: 0.5rem 1rem;
-  background-color: var(--color-sea);
+  background-color: var(--color-light);
   color: var(--color-blue);
   border-radius: 0.25rem;
 }
